<resources>
    <string name="com.crashlytics.android.build_id">383c68fd-f2a6-4c68-8914-30428804dd47</string>
    <string name="app_name">Vine</string>
    <string name="vine_api">https://api.vineapp.com</string>
    <string name="amazon_s3">https://s3.amazonaws.com</string>
    <string name="amazon_bucket">vines</string>
    <string name="twitter_api">https://api.twitter.com/1.1</string>
    <string name="tos_url">https://www.vine.co/terms</string>
    <string name="privacy_policy_url">https://www.vine.co/privacy</string>
    <string name="tos_twitter_url">https://twitter.com/tos</string>
    <string name="privacy_policy_twitter_url">https://twitter.com/privacy</string>
    <string name="explore_url">https://vine.co/explore</string>
    <string name="default_avatar_url">http://s3.amazonaws.com/vines/avatars/default.png</string>
    <string name="default_avatar_url_dev">http://s3.amazonaws.com/vines-dev/avatars/default.png</string>
    <string name="default_avatar_url_dev_https">https://s3.amazonaws.com/vines-dev/avatars/default.png</string>
    <string name="default_avatar_url_https">https://s3.amazonaws.com/vines/avatars/default.png</string>
    <string name="datetime_format_long">h:mm a · dd MMM yy</string>
    <string name="date_format_short">dd MMM</string>
    <string name="date_format_long">dd MMM yy</string>
    <string name="vine">Vine</string>
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signin">Sign In</string>
    <string name="login_success">Success</string>
    <string name="login_logging_in">Signing in</string>
    <string name="authenticator_activity_title">Sign in</string>
    <string name="logging_out">Signing out</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="start_signup_email">Sign up with \"Email\"</string>
    <string name="start_signup_twitter">Sign in with \"Twitter\"</string>
    <string name="start_already_signed_in">Already have an account? \"Sign in now\"</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_validating">Validating</string>
    <string name="login_username_hint">example@abc.com</string>
    <string name="login_password_hint">at least 8 characters</string>
    <string name="login_forgot_password">Forgot something? \"Reset your password.\"</string>
    <string name="password_reset_confirm">Please check your email for instructions to reset your password.</string>
    <string name="password_reset_not_found">"We couldn't find an account with that email address."</string>
    <string name="password_reset_error">An error occurred while trying to send a password reset email. Please try again later.</string>
    <string name="password_reset_text">"Enter your email below and we'll send you a link to reset your password."</string>
    <string name="password_reset_title">Reset Password</string>
    <string name="password_reset_action">Reset</string>
    <string name="signup_name_hint">Your name</string>
    <string name="signup_phone">Phone</string>
    <string name="signup_phone_hint">Optional</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="preview">Finish</string>
    <string name="sign_up_tos_line_1">By signing up, you agree to the</string>
    <string name="sign_up_tos_line_2">\"Privacy Policy\" &amp; \"Terms of Service.\"</string>
    <string name="sign_up_profile_photo">Profile photo</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_photo">Choose existing</string>
    <string name="remove_photo">Remove photo</string>
    <string name="signing_up">Signing up</string>
    <string name="sign_up_authorizing">Authorizing</string>
    <string name="dialog_sending">Sending</string>
    <string name="camera_photo_error">An error occured while trying to use that photo. Please check that your SD card is properly mounted.</string>
    <string name="profile_title">Profile</string>
    <string name="unsupported_feature">Your device does not support this feature.</string>
    <string name="photo_capture_error">An error occured while trying to capture your photo.</string>
    <string name="cropping_image">Cropping image</string>
    <string name="loading_image">Loading image</string>
    <string name="load_image_failure">An error occurred while trying to load the image.</string>
    <string name="cropping_image_failure">An error occurred while trying to crop the the image.</string>
    <string name="crop_photo_title">Crop Photo</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="send">Send</string>
    <string name="error_server">"An error occurred while communicating with Vine's servers. Please try again later."</string>
    <string name="error_unknown">An unknown error occurred. Please check your internet connection.</string>
    <string name="error_sign_up">An error occurred while trying to sign up. Please check your internet connection.</string>
    <string name="error_twitter_sdk">An error occurred while trying to sign in through Twitter.</string>
    <string name="login_xauth_username">Username</string>
    <string name="error_xauth">An error occurred while trying to sign in through Twitter.</string>
    <string name="login_xauth_username_hint">Twitter username or email</string>
    <string name="login_xauth_password_hint">Twitter password</string>
    <string name="login_xauth_title">Sign in with Twitter</string>
    <string name="login_xauth_tos_line_1">By pressing next, you agree to the</string>
    <string name="login_xauth_tos_line_2">\"Twitter Terms of Service\" &amp; \"Privacy Policy.\"</string>
    <string name="tab_title_timeline">Feed</string>
    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_explore">Explore</string>
    <string name="tab_title_profile">Profile</string>
    <string name="capture">Capture</string>
    <string name="find_friends">Find People</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="profile_screen_title">Profile</string>
    <string name="profile_posts">\"%1$d\" POSTS</string>
    <string name="profile_likes">\"%1$d\" LIKES</string>
    <string name="comments_title">Comments</string>
    <string name="comments_hint">Say something nice</string>
    <string name="comments_empty">Nobody has said anything yet.</string>
    <string name="comments_posting">Sending comment</string>
    <string name="user_followers">Followers</string>
    <string name="user_following">Following</string>
    <string name="user_likers">Likes</string>
    <string name="settings">Settings</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_name">Your full name</string>
    <string name="settings_description">A few words about yourself</string>
    <string name="settings_location">Location</string>
    <string name="settings_account">Account</string>
    <string name="settings_email">Email</string>
    <string name="settings_phone">Phone</string>
    <string name="settings_updating">Updating profile</string>
    <string name="settings_support">Support</string>
    <string name="settings_about">Version</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_tos">Terms of Service</string>
    <string name="settings_pp">Privacy Policy</string>
    <string name="settings_attribution">Attribution</string>
    <string name="settings_updated">Updated</string>
    <string name="settings_continue_editing">Continue editing</string>
    <string name="settings_discard">Discard changes</string>
    <string name="settings_unsaved_changes">You have unsaved changes.</string>
    <string name="settings_connect_to_twitter">Connect to Twitter</string>
    <string name="settings_connected_to_twitter">Connected to Twitter</string>
    <string name="settings_disconnect_twitter">Disconnect from Twitter?</string>
    <string name="settings_disconnecting_twitter">Disconnecting</string>
    <string name="settings_disconnect_dialog">Disconnect</string>
    <string name="settings_connect_to_twitter_summary">Tap to connect to Twitter</string>
    <string name="settings_about_summary">v%1$s</string>
    <string name="settings_about_tap">One more!</string>
    <string name="editors_pick">"Editor's Picks"</string>
    <string name="popular_now">Popular Now</string>
    <string name="no_camera_found_toast">Recording is not supported on this device yet.</string>
    <string name="getting_ready">Initializing</string>
    <string name="finish_processing_last">Finishing up</string>
    <string name="finish_processing_1">Processing</string>
    <string name="finish_processing_2">Rendering</string>
    <string name="finish_processing_3">Finishing up</string>
    <string name="discard_current_vine">Discard this Vine?</string>
    <string name="continue_next">Continue</string>
    <string name="continue_recording">Continue Recording</string>
    <string name="discard_current">Discard</string>
    <string name="discard_restart">Restart</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="storage_not_ready">"An error occurred while trying to save this file. Your device's storage isn't ready."</string>
    <string name="uploading">Uploading</string>
    <string name="posting">Finishing up</string>
    <string name="uploading_text">"Uploading video to Vine's servers"</string>
    <string name="almost_done">"Sending post to Vine's servers"</string>
    <string name="upload_failed">Upload failed</string>
    <string name="post_failed">Post failed</string>
    <string name="tap_to_retry_or_cancel">Tap to retry</string>
    <string name="continue_post">Unsubmitted post</string>
    <string name="continue_post_text">Tap to continue submitting this post</string>
    <string name="find_friends_address_cta">Connect to \"Address Book\"</string>
    <string name="find_friends_twitter_cta">Connect to \"Twitter\"</string>
    <string name="find_friends_search_txt">Invite via \"text\"</string>
    <string name="find_friends_search_email">Invite via \"email\"</string>
    <string name="find_friends_twitter_error">An error occurred while trying to search for Twitter contacts. Please try again later.</string>
    <string name="find_friends_address_error">An error occurred while trying to search for Address Book contacts. Please try again later.</string>
    <string name="find_friends_address_no_friends">"Sorry, we couldn't find Vine accounts for your contacts."</string>
    <string name="find_friends_twitter_xauth_error">An error occured while trying to authorize with Twitter. Please check your username and password and try again.</string>
    <string name="find_friends_twitter_sdk_error">An error occured while trying to search for Twitter contacts.</string>
    <string name="finding_friends_twitter">Searching for Twitter friends</string>
    <string name="finding_friends_address">Searching for Address Book Contacts</string>
    <string name="find_friends_address_subtitle">Your Contacts on Vine</string>
    <string name="find_friends_twitter_subtitle">Your Twitter friends on Vine</string>
    <string name="find_friends_invite_sms">"Follow me on Vine:
vine://user/%1$s

___
Don't have Vine? Get it from Google Play: 
https://get.vine.co"</string>
    <string name="find_friends_email_choose_title">Select email client</string>
    <string name="find_friends_invite_email_subject">Follow me on Vine</string>
    <string name="find_friends_invite_email">"Follow me on Vine:
vine://user/%1$s

___
Don't have Vine? Get it from Google Play: 
https://get.vine.co"</string>
    <string name="timeline_empty">"You're not following anyone yet."</string>
</resources>