<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="48.0dip">
        <EditText android:id="@id/signup_username" android:hint="@string/login_username_hint" android:inputType="textEmailAddress" style="@style/EditText.SignIn" />
        <co.vine.android.widget.TypefacesTextView android:id="@id/label_signup_username" android:layout_width="wrap_content" android:text="@string/login_username" android:layout_alignBottom="@id/signup_username" style="@style/SignInLabel" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <EditText android:id="@id/signup_password" android:hint="@string/login_password_hint" android:singleLine="true" android:layout_below="@id/username" android:inputType="textPassword" style="@style/EditText.SignIn" />
        <co.vine.android.widget.TypefacesTextView android:id="@id/label_signup_password" android:layout_width="wrap_content" android:text="@string/login_password" android:layout_alignBottom="@id/signup_password" android:inputType="textEmailAddress" style="@style/SignInLabel" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/phone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <EditText android:id="@id/signup_phone" android:hint="@string/signup_phone_hint" android:singleLine="true" android:layout_below="@id/password" android:inputType="text" style="@style/EditText.SignIn" />
        <co.vine.android.widget.TypefacesTextView android:id="@id/label_signup_phone" android:layout_width="wrap_content" android:text="@string/signup_phone" android:layout_alignBottom="@id/signup_phone" android:inputType="textEmailAddress" style="@style/SignInLabel" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:id="@id/tos_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="48.0dip">
        <co.vine.android.widget.TypefacesTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sign_up_tos_line_1" style="@style/SignupTOS" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <co.vine.android.widget.TypefacesTextView android:id="@id/tos_line_2" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/SignupTOS" />
    </RelativeLayout>
</LinearLayout>